@@ -8,6 +8,7 @@ struct eventflag {
 
 void eventflag_init (struct eventflag *ev);
 eventmask_t eventflag_wait (struct eventflag *ev);
+void eventflag_wait_all (struct eventflag *ev, eventmask_t m);
 eventmask_t eventflag_wait_timeout (struct eventflag *ev, uint32_t usec);
 void eventflag_signal (struct eventflag *ev, eventmask_t m);
 
